lround() -> qRound()

BUG: 147540

svn path=/trunk/KDE/kdegraphics/okular/; revision=683290